# knx-pico

./: .gitignore  CLAUDE.md  CODE_REVIEW_PERFORMANCE.md  Cargo.toml  DEVELOPMENT_STATUS.md  HARDWARE_TESTING.md  KNX_DISCOVERY.md  Makefile  OPTIMIZATION.md  OPTIMIZATION_REPORT.md  PERFORMANCE.md  PRE_PUBLISH_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  ROADMAP.md  RUST_GUIDELINES_REVIEW.md  TESTING.md  TESTING_STATUS.md  TYPESTATE_EXAMPLE.md  build.rs  check-all.sh  flash.sh  knx_search.py  knx_simulator.py  test_commands.sh  test_knx_client.py  test_runner.py  test_simulator.py
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: parse_benchmark.md
examples/: README.md  common.rs  dimming_control_client.rs  dpt3_dimming_blind.rs  ergonomic_api.rs  home_automation_dashboard.rs  knx_main_application.rs  knx_sniffer.rs  lighting_scene_controller.rs  macros_demo.md  pico_knx_async.rs  presence_detection_automation.rs  smart_thermostat.rs  test_with_simulator.rs  zero_cost_proof.rs
src/: common.rs  configuration.rs  configuration.rs.example  error.rs  knx_client.rs  knx_discovery.rs  lib.rs  logging.rs  macros.rs  main.rs  net.rs  utility.rs
src/addressing/: group.rs  individual.rs  mod.rs
src/dpt/: dpt1.rs  dpt13.rs  dpt3.rs  dpt5.rs  dpt7.rs  dpt9.rs  mod.rs
src/net/: embassy_adapter.rs  mock_transport.rs  transport.rs
src/protocol/: async_tunnel.rs  cemi.rs  constants.rs  frame.rs  mod.rs  services.rs  tunnel.rs
tests/: integration_test.rs
