[package]
name = "knx-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Cristiano Chieppa"]
description = "KNXnet/IP protocol implementation for embedded systems"
repository = "https://github.com/yourusername/knx-rs"
readme = "README.md"
keywords = ["knx", "knxnet-ip", "embedded", "no-std", "home-automation"]
categories = ["embedded", "no-std", "network-programming"]

publish = false

[lib]
name = "knx_rs"
path = "src/lib.rs"

[[bin]]
name = "knx-rs"
path = "src/main.rs"
required-features = ["embassy-rp"]

[dependencies]
# Core library dependencies (no_std)
heapless = { version = "0.9.1", default-features = false }

# Optional dependencies for defmt logging
defmt = { version = "1.0.1", optional = true }

# Embassy dependencies (only for binary/examples)
embassy-sync = { version = "0.7.2", features = ["defmt"], optional = true }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"], optional = true }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"], optional = true }
embassy-net = { version = "0.7.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"], optional = true }
embassy-usb-logger = { version = "0.5.1", optional = true }

# Hardware specific (only for RP2040 binary)
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"], optional = true }
cyw43-pio = { version = "0.8.0", features = ["defmt"], optional = true }
panic-persist = { version = "0.3.0", features = ["utf8"], optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
static_cell = { version = "2.1", optional = true }
log = { version = "0.4", optional = true }
critical-section = { version = "1.2.0", optional = true }

# Serialization support (optional)
serde = { version = "1.0.206", default-features = false, features = ["derive"], optional = true }

[features]
default = []

# Enable std support (for examples and applications)
std = []

# Enable defmt logging support
defmt = ["dep:defmt", "heapless/defmt"]

# Enable serde support
serde = ["dep:serde", "heapless/serde"]

# Feature for building the RP2040 binary
embassy-rp = [
    "dep:embassy-sync",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-rp",
    "dep:embassy-net",
    "dep:embassy-usb-logger",
    "dep:cyw43",
    "dep:cyw43-pio",
    "dep:panic-persist",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:cortex-m-rt",
    "dep:static_cell",
    "dep:log",
    "dep:critical-section",
    "heapless/defmt",
]

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
# Optimize for speed
opt-level = 3
# Enable Link-Time Optimization for better inlining across crates
lto = "thin"
# Keep less code size optimization in favor of speed
codegen-units = 1
# Panic = abort for smaller binary and faster unwinding
panic = "abort"

[profile.dev]
# Even in debug, optimize a bit for usable performance
opt-level = 1

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf" }
]
