[package]
name = "knx-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Cristiano Chieppa"]
description = "KNXnet/IP protocol implementation for embedded systems"
repository = "https://github.com/yourusername/knx-rs"
readme = "README.md"
keywords = ["knx", "knxnet-ip", "embedded", "no-std", "home-automation"]
categories = ["embedded", "no-std", "network-programming"]

publish = false

[lib]
name = "knx_rs"
path = "src/lib.rs"

[[bin]]
name = "knx-rs"
path = "src/main.rs"
# Allow either embassy-rp or embassy-rp-usb feature
required-features = []

[dependencies]
# Core library dependencies (no_std)
heapless = { version = "0.9.1", default-features = false }

# Optional dependencies for defmt logging
defmt = { version = "1.0.1", optional = true }

# Embassy dependencies (only for binary/examples)
embassy-sync = { version = "0.7.2", features = ["defmt"], optional = true }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"], optional = true }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"], optional = true }
embassy-net = { version = "0.7.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"], optional = true }
embassy-usb-logger = { version = "0.5.1", optional = true }

# Hardware specific (only for RP2040 binary)
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"], optional = true }
cyw43-pio = { version = "0.8.0", features = ["defmt"], optional = true }
panic-persist = { version = "0.3.0", features = ["utf8"], optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
static_cell = { version = "2.1", optional = true }
log = { version = "0.4", optional = true }
critical-section = { version = "1.2.0", optional = true }

# Serialization support (optional)
serde = { version = "1.0.206", default-features = false, features = ["derive"], optional = true }

[features]
default = []

# Enable std support (for examples and applications)
std = []

# Enable defmt logging support
defmt = ["dep:defmt", "heapless/defmt"]

# Enable serde support
serde = ["dep:serde", "heapless/serde"]

# USB logger feature (alternative to defmt-rtt)
usb-logger = ["dep:embassy-usb-logger", "dep:log"]

# Feature for building the RP2040 binary with defmt-rtt (default)
embassy-rp = [
    "dep:embassy-sync",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-rp",
    "dep:embassy-net",
    "dep:cyw43",
    "dep:cyw43-pio",
    "dep:panic-persist",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:cortex-m-rt",
    "dep:static_cell",
    "dep:critical-section",
    "heapless/defmt",
]

# Feature for building the RP2040 binary with USB logger
# Note: defmt-rtt is still needed because dependencies (cyw43, embassy-rp) use defmt internally
embassy-rp-usb = [
    "dep:embassy-sync",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-rp",
    "dep:embassy-net",
    "dep:cyw43",
    "dep:cyw43-pio",
    "dep:panic-persist",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:cortex-m-rt",
    "dep:static_cell",
    "dep:critical-section",
    "heapless/defmt",
    "usb-logger",
]

[profile.release]
# Optimize for size instead of speed (z = aggressive size optimization)
opt-level = "z"
# Enable full Link-Time Optimization for maximum size reduction
lto = "fat"
# Single codegen unit for better optimization (slower compile, smaller binary)
codegen-units = 1
# Strip symbols from binary
strip = true
# No debug info in release (saves ~2-3 MB)
debug = false
# Panic = abort for smaller binary and faster unwinding
panic = "abort"
# Disable overflow checks for smaller size (use with caution!)
overflow-checks = false

[profile.dev]
# Even in debug, optimize a bit for usable performance
opt-level = 1

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf" }
]
